--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -58,7 +58,14 @@
 	    <artifactId>jackson-databind</artifactId>
 	    <version>2.9.3</version>
 	</dependency>
-	
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+	<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-crypto</artifactId>
+    <version>4.2.0.RELEASE</version>
+</dependency>
+
+		
     
   </dependencies>
   <build>
