--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.4.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.0.0",
     "rxjs": "~6.4.0",
@@ -28,12 +33,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.3",
+    "@angular/cli": "^8.0.6",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
