--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.3",
+    "@angular/animations": "^8.1.0",
     "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
@@ -28,12 +28,13 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "ng4-social-login": "^1.4.2",
     "moment": "^2.24.0",
     "ng-multiselect-dropdown": "^0.2.3",
     "ng-pick-datetime": "^7.0.0",
+    "ng4-social-login": "^1.4.2",
     "ngx-bootstrap": "^5.0.0",
     "ngx-bootstrap-datetime-popup": "^4.3.0",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
