--- a/assessment-records-data/src/main/resources/application.properties
+++ b/assessment-records-data/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/assessment
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
