--- a/assess-frontend/angular.json
+++ b/assess-frontend/angular.json
@@ -24,8 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
+                        ],
             "scripts": []
           },
           "configurations": {
@@ -117,4 +118,5 @@
       }
     }},
   "defaultProject": "assess-frontend"
+  
 }
