--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@syncfusion/ej2-angular-dropdowns": "^17.1.49",
+    "angular-bootstrap-md": "^8.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular2-datetimepicker": "^1.1.1",
     "bootstrap": "^3.4.1",
+    "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
