--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,11 +29,11 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/ngx-toastr/toastr.css",
-              "node_modules/angular-bootstrap-md/scss/mdb-free.scss"
-            ],
+              "node_modules/ngx-toastr/toastr.css"
+/*             "node_modules/angular-bootstrap-md/scss/mdb-free.scss" 
+ */            ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
