--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@syncfusion/ej2-angular-dropdowns": "^17.1.49",
+    "ag-grid-angular": "^21.0.1",
+    "ag-grid-community": "^21.0.1",
     "angular-bootstrap-md": "^8.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular2-datetimepicker": "^1.1.1",
